--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bugs": {
     "url": "https://github.com/ether/ep_subscript_and_superscript/issues"
   },
-  "bundleDependencies": false,
+  "bundleDependencies": [],
   "dependencies": {},
   "deprecated": false,
   "description": "Add support for different Fonts",
