--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -44,20 +44,27 @@ jobs:
           PLUGIN_NAME: ${{ steps.plugin_name.outputs.plugin_name }}
       -
         uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v3
+        name: Install pnpm
         with:
-          node-version: 20
-          cache: 'npm'
-          cache-dependency-path: |
-            src/package-lock.json
-            src/bin/doc/package-lock.json
-            node_modules/${{ steps.plugin_name.outputs.plugin_name }}/package-lock.json
-      - run: npm install npm@6.14.18 -g
-        name: Install legacy npm for correct dependency resolution
+          version: 8
+          run_install: false
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+      - uses: actions/cache@v4
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
       -
         name: Install plugin dependencies
         run: |
           cd ./node_modules/"${PLUGIN_NAME}"
-          npm ci
+          pnpm i
         env:
           PLUGIN_NAME: ${{ steps.plugin_name.outputs.plugin_name }}
       # Etherpad core dependencies must be installed after installing the
@@ -71,7 +78,7 @@ jobs:
       # rules.
       -
         name: Install Etherpad core dependencies
-        run: src/bin/installDeps.sh
+        run: ./bin/installDeps.sh
       -
         name: Run the backend tests
-        run: cd src && npm test
+        run: cd src && pnpm run test
