--- a/package.json
+++ b/package.json
@@ -26,15 +26,11 @@
     "url": "https://etherpad.org/"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-config-etherpad": "^3.0.22",
-    "typescript": "^4.9.5"
+    "eslint": "^8.57.0",
+    "eslint-config-etherpad": "^3.0.22"
   },
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
-  },
-  "peerDependencies": {
-    "ep_etherpad-lite": ">=1.8.6"
   }
 }
