--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -12,73 +12,54 @@ jobs:
       || (github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id)
     name: with Plugins
     runs-on: ubuntu-latest
-
     steps:
-      -
-        name: Install libreoffice
-        run: |
-          sudo add-apt-repository -y ppa:libreoffice/ppa
-          sudo apt update
-          sudo apt install -y --no-install-recommends libreoffice libreoffice-pdfimport
-      -
-        name: Install etherpad core
-        uses: actions/checkout@v4
-        with:
-          repository: ether/etherpad-lite
-      -
-        name: Checkout plugin repository
-        uses: actions/checkout@v4
-        with:
-          path: ./node_modules/__tmp
-      -
-        name: Determine plugin name
-        id: plugin_name
-        run: |
-          cd ./node_modules/__tmp
-          npx -c 'printf %s\\n "::set-output name=plugin_name::${npm_package_name}"'
-      -
-        name: Rename plugin directory
-        run: |
-          mv ./node_modules/__tmp ./node_modules/"${PLUGIN_NAME}"
-        env:
-          PLUGIN_NAME: ${{ steps.plugin_name.outputs.plugin_name }}
-      -
-        uses: actions/setup-node@v4
-      - uses: pnpm/action-setup@v3
-        name: Install pnpm
-        with:
-          version: 8
-          run_install: false
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-      - uses: actions/cache@v4
-        name: Setup pnpm cache
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-      -
-        name: Install plugin dependencies
-        run: |
-          cd ./node_modules/"${PLUGIN_NAME}"
-          pnpm i
-        env:
-          PLUGIN_NAME: ${{ steps.plugin_name.outputs.plugin_name }}
-      # Etherpad core dependencies must be installed after installing the
-      # plugin's dependencies, otherwise npm will try to hoist common
-      # dependencies by removing them from src/node_modules and installing them
-      # in the top-level node_modules. As of v6.14.10, npm's hoist logic appears
-      # to be buggy, because it sometimes removes dependencies from
-      # src/node_modules but fails to add them to the top-level node_modules.
-      # Even if npm correctly hoists the dependencies, the hoisting seems to
-      # confuse tools such as `npm outdated`, `npm update`, and some ESLint
-      # rules.
-      -
-        name: Install Etherpad core dependencies
-        run: ./bin/installDeps.sh
-      -
-        name: Run the backend tests
-        run: cd src && pnpm run test
+            -
+              name: Install libreoffice
+              uses: awalsh128/cache-apt-pkgs-action@v1.4.2
+              with:
+                packages: libreoffice libreoffice-pdfimport
+                version: 1.0
+            -
+              name: Install etherpad core
+              uses: actions/checkout@v3
+              with:
+                repository: ether/etherpad-lite
+            -
+              name: Checkout plugin repository
+              uses: actions/checkout@v3
+              with:
+                path: ./node_modules/__tmp
+            -
+              name: Determine plugin name
+              id: plugin_name
+              run: |
+                cd ./node_modules/__tmp
+                npx -c 'printf %s\\n "::set-output name=plugin_name::${npm_package_name}"'
+            -
+              name: Rename plugin directory
+              run: |
+                mv ./node_modules/__tmp ./node_modules/"${PLUGIN_NAME}"
+              env:
+                PLUGIN_NAME: ${{ steps.plugin_name.outputs.plugin_name }}
+            - uses: pnpm/action-setup@v3
+              name: Install pnpm
+              with:
+              version: 8
+              run_install: false
+            - name: Get pnpm store directory
+              shell: bash
+              run: |
+                echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+            - uses: actions/cache@v4
+              name: Setup pnpm cache
+              with:
+                path: ${{ env.STORE_PATH }}
+                key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+                restore-keys: |
+                  ${{ runner.os }}-pnpm-store-
+            -
+              name: Install Etherpad core dependencies
+              run: bin/installDeps.sh
+            -
+              name: Run the backend tests
+              run: pnpm run test
