--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -1,33 +1,24 @@
 # Publicly credit Sauce Labs because they generously support open source
 # projects.
-name: "frontend tests powered by Sauce Labs"
+name: "Frontend Tests"
 
 on: [push]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    if: ${{ github.actor != 'dependabot[bot]' }}
 
     steps:
       -
-        name: Generate Sauce Labs strings
-        id: sauce_strings
-        run: |
-          printf %s\\n '::set-output name=name::${{github.event.repository.name}} ${{ github.workflow }} - ${{ github.job }}'
-          printf %s\\n '::set-output name=tunnel_id::${{ github.run_id }}-${{ github.run_number }}-${{ github.job }}'
-      -
         name: Check out Etherpad core
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
         with:
           repository: ether/etherpad-lite
-      -
-        uses: actions/setup-node@v4
       - uses: pnpm/action-setup@v3
         name: Install pnpm
         with:
-          version: 8
-          run_install: false
+        version: 8
+        run_install: false
       - name: Get pnpm store directory
         shell: bash
         run: |
@@ -41,7 +32,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
       -
         name: Check out the plugin
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
         with:
           path: ./node_modules/__tmp
       -
@@ -80,31 +71,23 @@ jobs:
       # rules.
       -
         name: Install Etherpad core dependencies
-        run: ./bin/installDeps.sh
-      -
-        name: Create settings.json
-        run: cp settings.json.template settings.json
-      -
-        name: Disable import/export rate limiting
-        run: |
-          sed -e '/^ *"importExportRateLimiting":/,/^ *\}/ s/"max":.*/"max": 0/' -i settings.json
-      -
-        name: Remove standard frontend test files
-        run: rm -rf src/tests/frontend/specs
-      -
-        uses: saucelabs/sauce-connect-action@v2.3.6
-        with:
-          username: ${{ secrets.SAUCE_USERNAME }}
-          accessKey: ${{ secrets.SAUCE_ACCESS_KEY }}
-          tunnelIdentifier: ${{ steps.sauce_strings.outputs.tunnel_id }}
-      -
-        name: Run the frontend tests
+        run: bin/installDeps.sh
+      - name: Create settings.json
+        run: cp ./src/tests/settings.json settings.json
+      - name: Run the frontend tests
         shell: bash
-        env:
-          SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
-          SAUCE_ACCESS_KEY: ${{ secrets.SAUCE_ACCESS_KEY }}
-          SAUCE_NAME: ${{ steps.sauce_strings.outputs.name }}
-          TRAVIS_JOB_NUMBER: ${{ steps.sauce_strings.outputs.tunnel_id }}
-          GIT_HASH: ${{ steps.environment.outputs.sha_short }}
         run: |
-          src/tests/frontend/travis/runner.sh
+          pnpm run dev &
+          connected=false
+          can_connect() {
+          curl -sSfo /dev/null http://localhost:9001/ || return 1
+          connected=true
+          }
+          now() { date +%s; }
+          start=$(now)
+          while [ $(($(now) - $start)) -le 15 ] && ! can_connect; do
+          sleep 1
+          done
+          cd src
+          pnpm exec playwright install chromium  --with-deps
+          pnpm run test-ui --project=chromium
