--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -69,6 +69,9 @@ jobs:
               name: Install Etherpad core dependencies
               working-directory: ./etherpad-lite
               run: bin/installDeps.sh
+            - name: List test files
+              working-directory: ./etherpad-lite/src
+              run: ls ../node_modules/ep_*/static/tests/backend/specs/**
             -
               name: Run the backend tests
               working-directory: ./etherpad-lite
