--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -25,6 +25,7 @@ jobs:
               with:
                 repository: ether/etherpad-lite
                 path: etherpad-lite
+                ref: fix/build
             - uses: pnpm/action-setup@v3
               name: Install pnpm
               with:
