--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -25,7 +25,7 @@ jobs:
               with:
                 repository: ether/etherpad-lite
                 path: etherpad-lite
-                ref: fix/build
+                ref: feat/local-install
             - uses: pnpm/action-setup@v3
               name: Install pnpm
               with:
