--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -5,7 +5,7 @@ name: Node.js Package
 
 on:
   workflow_run:
-    workflows: [Frontend Tests, Backend Tests]
+    workflows: [Frontend Tests, Backend tests]
     types:
       - completed
     branches:
