Apply publish only on succesful workflow runs.

--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -5,7 +5,7 @@ name: Node.js Package
 
 on:
   workflow_run:
-    workflows: [Frontend Tests, Backend tests]
+    workflows: ["Backend Tests", "Frontend Tests"]
     types:
       - completed
     branches:
