Put everything into one file.

--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -1,7 +1,8 @@
 name: Backend Tests
 
 # any branch is useful for testing before a PR is submitted
-on: [push, pull_request]
+on:
+  workflow_call:
 
 jobs:
   withplugins:
