--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   publish-npm:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v4
@@ -68,8 +67,8 @@ jobs:
         run: pnpm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-      -
-        name: Add package to etherpad organization
-        run: pnpm access grant read-write etherpad:developers
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      #-
+      #  name: Add package to etherpad organization
+      #  run: pnpm access grant read-write etherpad:developers
+      #  env:
+      #    NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
