--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "url": "https://github.com/ether/ep_subscript_and_superscript/issues"
   },
   "bundleDependencies": [],
-  "dependencies": {},
   "deprecated": false,
   "description": "Add support for different Fonts",
   "engines": {
@@ -26,8 +25,11 @@
     "url": "https://etherpad.org/"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.11.30",
     "eslint": "^8.57.0",
     "eslint-config-etherpad": "^4.0.4",
+    "mocha": "^10.4.0",
     "typescript": "^5.4.3"
   },
   "scripts": {
